--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <script src="img.js"></script>
     <script src="actor.js"></script>
     <script src="cars.js"></script>
+    <script src="p5collide2d.js"></script>
+    <script src="sounds.js"></script>
+
   </body>
 </html>
